--- a/frontend/src/AuthModal.css
+++ b/frontend/src/AuthModal.css
@@ -1,16 +1,13 @@
 .auth-modal {
-    position: fixed;
+    position: absolute;
     z-index: 1000;
-    left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
+    left: 50%;
+    transform: translateX(-50%);
     background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
+    max-width: 300px; /* Adjust as needed */
   }
-  
   .auth-modal-content {
     background-color: #f4f4f4;
     padding: 20px;
